; ModuleID = '/home/carl/AnghaBench/linux/tools/power/acpi/os_specific/service_layers/extr_osunixxf.c_acpi_os_predefined_override.c'
source_filename = "/home/carl/AnghaBench/linux/tools/power/acpi/os_specific/service_layers/extr_osunixxf.c_acpi_os_predefined_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_predefined_names = type { i32 }

@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_os_predefined_override(%struct.acpi_predefined_names* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.acpi_predefined_names*, align 8
  %5 = alloca i32**, align 8
  store %struct.acpi_predefined_names* %0, %struct.acpi_predefined_names** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load %struct.acpi_predefined_names*, %struct.acpi_predefined_names** %4, align 8
  %7 = icmp ne %struct.acpi_predefined_names* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32**, i32*** %5, align 8
  %10 = icmp ne i32** %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %12, i32* %3, align 4
  br label %16

13:                                               ; preds = %8
  %14 = load i32**, i32*** %5, align 8
  store i32* null, i32** %14, align 8
  %15 = load i32, i32* @AE_OK, align 4
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
